# ipv7c-vpn-p2p

./: .gitignore  AUDITORIA_IPv7C.md  Cargo.toml  README.md  ipv7c.proto
.github/workflows/: ci.yml  omnipresencia_ci.yml
Docs/: ARCHITECTURE.md  AUDITORIA_MASIVA_IPV7C_Y_ANTIGUOS_2026_05_15.md  CI_CD_STRATEGY.md  Creación de Programas Extensos con IA.md  ESTRATEGIA_AUTOEXPANSION_HARDWARE.md  IPV8_MASTERPLAN_5000_LINEAS.md  MANUAL_DE_OPERACIONES.md  PARADIGMA_COMUNICACION_SOBERANA.md  PLAN_DESARROLLO_IPV7C.md  PLAN_EJECUCION_HARDWARE.md  PLAN_OMNIPRESENCIA_IPV7C.md
Docs/ipv8_natural/: 00_LEEME_NATURAL.md  01_ARQUITECTURA_NATURAL_DE_IPV8.md  02_ARBOL_NATURAL_DE_CARPETAS_Y_ARCHIVOS.md  03_CONTRATOS_NATURALES_POR_MODULO.md  04_GUIA_DE_TRANSFORMACION_A_CODIGO_CON_VARIAS_IAS.md  05_INNOVACIONES_ESTRATEGICAS_PARA_IPV8.md  06_OPORTUNIDADES_DE_IPV8.md  07_INDEPENDENCIA_TECNOLOGICA_DE_IPV8.md  08_SOBERANIA_OPERATIVA_Y_POLITICA_DE_IPV8.md  09_GLOSARIO_ESTRATEGICO_DE_INDEPENDENCIA_Y_SOBERANIA.md  10_MATRIZ_DE_DEPENDENCIAS_DE_IPV8.md  11_NIVELES_DE_SOBERANIA_POR_PERFIL.md  12_MAPA_DE_RIESGOS_Y_CAPTURA_EXTERNA.md
bindings/: README.md
bins/ipv7c-cli/: Cargo.toml
bins/ipv7c-cli/src/: main.rs
bins/ipv7c-daemon/: Cargo.toml
bins/ipv7c-daemon/src/: main.rs  rpc.rs
cli-daemon/: Cargo.toml
cli-daemon/src/: main.rs
core/: Cargo.toml  pyproject.toml
core/src/: jni_bindings.rs  lib.rs  p2p.rs
crates/ipv7c-config/: Cargo.toml
crates/ipv7c-config/src/: defaults.rs  error.rs  lib.rs
crates/ipv7c-crypto/: Cargo.toml
crates/ipv7c-crypto/benches/: crypto_bench.rs
crates/ipv7c-crypto/src/: aead.rs  error.rs  kdf.rs  kem.rs  keys.rs  lib.rs  session.rs
crates/ipv7c-discovery/: Cargo.toml
crates/ipv7c-discovery/src/: dht.rs  error.rs  lib.rs  mdns.rs
crates/ipv7c-governance/: Cargo.toml
crates/ipv7c-governance/src/: error.rs  lib.rs  trust.rs
crates/ipv7c-identity/: Cargo.toml
crates/ipv7c-identity/src/: did.rs  error.rs  lib.rs  profile.rs  wallet.rs
crates/ipv7c-node/: Cargo.toml
crates/ipv7c-node/src/: error.rs  lib.rs  lifecycle.rs
crates/ipv7c-protocol/: Cargo.toml
crates/ipv7c-protocol/src/: error.rs  frame.rs  handshake.rs  lib.rs
crates/ipv7c-routing/: Cargo.toml
crates/ipv7c-routing/src/: ai.rs  error.rs  gossip.rs  lib.rs  metrics.rs  score.rs  table.rs
crates/ipv7c-transport/: Cargo.toml
crates/ipv7c-transport/src/: error.rs  hole_punch.rs  lib.rs  metrics.rs  pluggable.rs  udp.rs
crates/ipv7c-tunnel/: Cargo.toml
crates/ipv7c-tunnel/src/: adapter.rs  error.rs  lib.rs  user_space.rs
desktop/: package-lock.json
desktop/src/: index.html  main.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
hardware/esp32_sensor/: Cargo.toml
hardware/esp32_sensor/src/: lib.rs
log/: 20260513-214909_fronda_cf9ce02c41ec.jsonl  20260513-221236_proc-2_bc9823573fb8.jsonl  20260513-221528_proc-1_29d37a8ddfa2.jsonl  20260513-221528_proc-2_f12e9d55e618.jsonl  20260513-224925_fronda_cf9ce02c41ec.jsonl  20260513-234912_fronda_cf9ce02c41ec.jsonl  20260514-000554_fronda_cf9ce02c41ec.jsonl  20260514-001327_fronda_cf9ce02c41ec.jsonl  20260514-003749_fronda_cf9ce02c41ec.jsonl  20260514-003915_fronda_cf9ce02c41ec.jsonl  20260514-004108_fronda_cf9ce02c41ec.jsonl  20260514-092216_fronda_cf9ce02c41ec.jsonl  20260514-122802_fronda_cf9ce02c41ec.jsonl  20260514-205134_fronda_cf9ce02c41ec.jsonl
mobile/: ipv7c.udl
mobile/android/: IPv7cVpnService.kt
mobile/ios/: IPv7cPacketTunnelProvider.swift
rust/: ipv8_central_blueprint.rs
rust/ipv7c_core/: Cargo.toml  README.md  pyproject.toml
rust/ipv7c_core/src/: lib.rs
src/example/: example.c  example.vcxproj
