[package]
name = "ipv7c_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "ipv7c_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
jni = "0.21.1"
chacha20poly1305 = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"
flate2 = "1.1.9"
