[package]
name = "ipv7c-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Post-quantum cryptographic primitives for IPv7C"

[dependencies]
chacha20poly1305 = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
ml-kem = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "crypto_bench"
harness = false
