[package]
name = "ipv7c-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Decentralized identity, keypair management, and multi-profile support"

[dependencies]
ipv7c-crypto = { path = "../ipv7c-crypto" }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
