[package]
name = "ipv7c-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Binary wire protocol, frame types, and handshake state machine"

[dependencies]
ipv7c-crypto = { path = "../ipv7c-crypto" }
serde = { workspace = true }
bincode = { workspace = true }
zstd = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
