[package]
name = "ipv7c-tunnel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TUN virtual network adapter for IP packet capture"

[dependencies]
ipv7c-transport = { path = "../ipv7c-transport" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
wintun = "0.5"

[target.'cfg(unix)'.dependencies]
tun2 = { workspace = true }
